--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "aos": "^3.0.0-beta.6",
+    "axios": "^0.24.0",
+    "emailjs-com": "^3.2.0",
+    "notiflix": "^3.2.2",
+    "react-router-dom": "^6.2.1",
+    "react-router-hash-link": "^2.4.3",
+    "react-transition-group": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
