--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "notiflix": "^3.2.2",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
-    "react-transition-group": "^4.4.2",
+    "react-transition-group": "^4.4.2"
 
   },
   "scripts": {
