--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "aos": "^3.0.0-beta.6",
+    "aos": "^2.3.4",
     "axios": "^0.24.0",
     "emailjs-com": "^3.2.0",
     "notiflix": "^3.2.2",
