--- a/package.json
+++ b/package.json
@@ -2,23 +2,19 @@
   "name": "esmus",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mld.ng/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.17.1",
-    "react-dom": "^18.17.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "aos": "^2.3.4",
-    "axios": "^0.24.0",
-    "emailjs-com": "^3.2.0",
-    "notiflix": "^3.2.2",
-    "react-router-dom": "^6.2.1",
+    "axios": "^1.6.2",
+    "notiflix": "^3.2.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
     "react-router-hash-link": "^2.4.3",
-    "react-transition-group": "^4.4.2"
-
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,10 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7"
   }
 }
